--- a/KingfoodIO/wwwroot/html/new_meals_restaurant.html
+++ b/KingfoodIO/wwwroot/html/new_meals_restaurant.html
@@ -475,9 +475,10 @@
 																	<div
 																		style="text-decoration:none;display:inline-block;color:#ffffff;background-color:#f08619;border-radius:4px;width:auto;border-top:0px solid transparent;font-weight:400;border-right:0px solid transparent;border-bottom:0px solid transparent;border-left:0px solid transparent;padding-top:5px;padding-bottom:5px;font-family:Oswald, Arial, Helvetica Neue, Helvetica, sans-serif;font-size:16px;text-align:center;mso-border-alt:none;word-break:keep-all;">
 																		<span
-																			style="padding-left:20px;padding-right:20px;font-size:16px;display:inline-block;letter-spacing:normal;"><a
-																			href="https://order.groupmeals.com/AcceptOrder/@Model.BookingId?opt=1&sub=@Model.BookingId&e=@Model.ReceiverEmail" target="_blank" style="word-break: break-word; text-decoration:none;color:#fefefe; line-height: 32px;"> Accept
-																				接收</a></span></div>
+																			style="padding-left:20px;padding-right:20px;font-size:16px;display:inline-block;letter-spacing:normal;">
+																		<a href="https://delightful-bay-0aab6e203.5.azurestaticapps.net/AcceptOrder/@Model.BookingId?opt=1&sub=@Model.BookingId&e=@Model.ReceiverEmail" target="_blank" style="word-break: break-word; text-decoration:none;color:#fefefe; line-height: 32px;"> Accept
+																				接收</a>
+																			</span></div>
 																	<!--[if mso]></center></v:textbox></v:roundrect><![endif]-->
 																</div>
 															</td>
@@ -494,9 +495,11 @@
 																	<div
 																		style="text-decoration:none;display:inline-block;color:#ffffff;background-color:#bc3f3f;border-radius:4px;width:auto;border-top:0px solid transparent;font-weight:400;border-right:0px solid transparent;border-bottom:0px solid transparent;border-left:0px solid transparent;padding-top:5px;padding-bottom:5px;font-family:Oswald, Arial, Helvetica Neue, Helvetica, sans-serif;font-size:16px;text-align:center;mso-border-alt:none;word-break:keep-all;">
 																		<span
-																			style="padding-left:20px;padding-right:20px;font-size:16px;display:inline-block;letter-spacing:normal;"><a
-																			href="https://order.groupmeals.com/AcceptOrder/@Model.BookingId?opt=2&sub=@Model.BookingId&e=@Model.ReceiverEmail" target="_blank" style="word-break: break-word; text-decoration:none;color:#fefefe; line-height: 32px;">Decline
-																				拒绝</a></span></div>
+																			style="padding-left:20px;padding-right:20px;font-size:16px;display:inline-block;letter-spacing:normal;">
+																		<a href="https://delightful-bay-0aab6e203.5.azurestaticapps.net/AcceptOrder/@Model.BookingId?opt=2&sub=@Model.BookingId&e=@Model.ReceiverEmail" target="_blank" style="word-break: break-word; text-decoration:none;color:#fefefe; line-height: 32px;">Decline
+																				拒绝</a>
+																		</span>
+																	</div>
 																	<!--[if mso]></center></v:textbox></v:roundrect><![endif]-->
 																</div>
 															</td>
